--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,10 +2,10 @@
 FROM python:2.7-slim
 
 # Set the working directory to /app
-WORKDIR /app
+WORKDIR /
 
 # Copy the current directory contents into the container at /app
-COPY . /app
+COPY . /
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
@@ -14,7 +14,7 @@ RUN pip install --trusted-host pypi.python.org -r requirements.txt
 EXPOSE 80
 
 # Define environment variable
-ENV NAME World
+ENV MESSAGE "Un saluto dal Dio Porco"
 
 # Run app.py when the container launches
 CMD ["python", "app.py"]
