--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,20 +1,34 @@
-# Use an official Python runtime as a parent image
-FROM python:2.7-slim
-
-# Set the working directory to /app
-WORKDIR /
-
-# Copy the current directory contents into the container at /app
-COPY . /
-
-# Install any needed packages specified in requirements.txt
-RUN pip install --trusted-host pypi.python.org -r requirements.txt
-
-# Make port 80 available to the world outside this container
-EXPOSE 80
-
-# Define environment variable
-ENV MESSAGE "Un saluto dal Dio Porco"
-
-# Run app.py when the container launches
-CMD ["python", "app.py"]
+# Dockerfile-flask
+# We simply inherit the Python 3 image. This image does
+# not particularly care what OS runs underneath
+FROM python:3.7-alpine
+RUN set -e; \
+	apk add --no-cache --virtual .build-deps \
+		gcc \
+		libc-dev \
+		linux-headers \
+	;
+# Set an environment variable with the directory
+# where we'll be running the app
+ENV APP /app
+# Create the directory and instruct Docker to operate
+# from there from now on
+RUN mkdir $APP
+WORKDIR $APP
+# Expose the port uWSGI will listen on
+# EXPOSE 5000
+# Copy the requirements file in order to install
+# Python dependencies
+COPY requirements.txt .
+# Install Python dependencies
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
+# Delete .build-deps
+RUN apk del .build-deps;
+# We copy the rest of the codebase into the image
+COPY . .
+# Run uwsgi unprivileged
+RUN addgroup -S uwsgi && adduser -S uwsgi -G uwsgi
+# Finally, we run uWSGI with the ini file we
+# created earlier
+CMD [ "uwsgi", "--ini", "wsgi.ini" ]
