--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - $PWD/nginx/html/:/usr/share/nginx/html/
 
   redis:
-    image: redis:5-alpine
+    image: redis:alpine
     volumes:
       - redis_data:/data
 
