--- a/nginx/wsgi.conf
+++ b/nginx/wsgi.conf
@@ -4,8 +4,9 @@ server {
 
     root /usr/share/nginx/html;
 
-    location ^~ /static/ {
-        alias /usr/share/nginx/html/static/; 
+    location ^~ /api/ {
+        include uwsgi_params;
+        uwsgi_pass flask:3333;
     }
 
     location = /greetings { 
