--- a/webapp/webapp.ini
+++ b/webapp/webapp.ini
@@ -3,7 +3,7 @@
 protocol = uwsgi
 ; This is the name of our Python file
 ; minus the file extension
-module = app:application
+module = webapp:webapp
 ; This is the name of the variable
 ; in our script that will be called
 ; callable = application
@@ -14,7 +14,7 @@ processes = 1
 ; then expose on our Dockerfile
 socket = 0.0.0.0:3333
 ; For development only
-touch-reload = /app/app.py
+touch-reload = /webapp/webapp.py
 vacuum = true
 die-on-term = true
 uid = uwsgi
