--- a/api/api.ini
+++ b/api/api.ini
@@ -1,18 +1,21 @@
-; app.ini
+; api.ini
 [uwsgi]
-protocol = uwsgi
 ; This is the name of our Python file
 ; minus the file extension
-module = api:api
+module = api:flaskAPI
 ; This is the name of the variable
 ; in our script that will be called
 ; callable = application
 master = true
 ; Set uWSGI to start up 1 workers
 processes = 1
-; We use the port 5000 which we will
+; We use the port 6000 which we will
 ; then expose on our Dockerfile
-socket = 0.0.0.0:5555
+uwsgi-socket = 0.0.0.0:6000
+; If we want to allow the web application
+; directly call the api without the need
+; to be proxied by Nginx, use http or http-socket
+http-socket = 0.0.0.0:7000
 ; For development only
 touch-reload = /api/api.py
 vacuum = true
