--- a/nginx/wsgi.conf
+++ b/nginx/wsgi.conf
@@ -4,13 +4,13 @@ server {
 
     root /usr/share/nginx/html;
 
-    location ^~ /api/ {
+    location ~ /api {
         include uwsgi_params;
-        uwsgi_pass flask:3333;
-    }
+        uwsgi_pass uwsgi://api:6000;
+    }  
 
-    location = /greetings { 
+    location ~ /(greetings|delete) { 
         include uwsgi_params;
-        uwsgi_pass flask:3333;
+        uwsgi_pass uwsgi://flask:5000;
     }
 }
