--- a/webapp/webapp.ini
+++ b/webapp/webapp.ini
@@ -1,6 +1,5 @@
-; app.ini
+; webapp.ini
 [uwsgi]
-protocol = uwsgi
 ; This is the name of our Python file
 ; minus the file extension
 module = webapp:webapp
@@ -12,7 +11,7 @@ master = true
 processes = 1
 ; We use the port 5000 which we will
 ; then expose on our Dockerfile
-socket = 0.0.0.0:3333
+uwsgi-socket = 0.0.0.0:5000
 ; For development only
 touch-reload = /webapp/webapp.py
 vacuum = true
