--- a/nginx/wsgi.conf
+++ b/nginx/wsgi.conf
@@ -9,7 +9,7 @@ server {
         uwsgi_pass uwsgi://api:6000;
     }  
 
-    location ~ /(greetings|delete) { 
+    location ~ /(greetings|delete|deleteall|showall) { 
         include uwsgi_params;
         uwsgi_pass uwsgi://flask:5000;
     }
