--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,21 @@
 image: tiangolo/docker-with-compose
 
-stages:
-  - build
-
 services:
   - docker:dind
+
+stages:
+    - build
+    - test
 
 build:
   stage: build
   script: 
     - docker-compose build
+
+test:
+    stage: test
+    script:
+        - pip install -U pytest flaskr
+        - pytest tests
+
   
