--- a/api/api.ini
+++ b/api/api.ini
@@ -17,6 +17,7 @@ uwsgi-socket = 0.0.0.0:6000
 ; to be proxied by Nginx, use http or http-socket
 http-socket = 0.0.0.0:7000
 ; For development only
+touch-reload = /api/tests/test_api.py
 touch-reload = /api/api.py
 vacuum = true
 die-on-term = true
