--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ test:
     script:
         - cd api
         - pip install --upgrade pip
-        - pip install --user pytest
+        - pip install pytest
         - pytest -p no:cacheprovider tests
 
   
