Added build stage Test should now run smoothly

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,13 @@ services:
     - docker:dind
 
 stages:
+    - build
     - test
+
+build:
+    stage: build
+    script:
+        - docker-compose build
 
 test:
     stage: test
