Added push images to registry after successful test

--- a/api/api.ini
+++ b/api/api.ini
@@ -8,7 +8,7 @@ module = api:flaskAPI
 ; callable = application
 master = true
 ; Set uWSGI to start up 1 workers
-processes = 1
+processes = 4
 ; We use the port 6000 which we will
 ; then expose on our Dockerfile
 uwsgi-socket = 0.0.0.0:6000
@@ -17,8 +17,8 @@ uwsgi-socket = 0.0.0.0:6000
 ; to be proxied by Nginx, use http or http-socket
 http-socket = 0.0.0.0:7000
 ; For development only
-touch-reload = /api/tests/test_api.py
-touch-reload = /api/api.py
+; touch-reload = /api/tests/test_api.py
+; touch-reload = /api/api.py
 vacuum = true
 die-on-term = true
 uid = uwsgi
