--- a/webapp/webapp.ini
+++ b/webapp/webapp.ini
@@ -7,13 +7,13 @@ module = webapp:webapp
 ; in our script that will be called
 ; callable = application
 master = true
-; Set uWSGI to start up 1 workers
-processes = 1
+; Set uWSGI to start up 4 workers
+processes = 4
 ; We use the port 5000 which we will
 ; then expose on our Dockerfile
 uwsgi-socket = 0.0.0.0:5000
 ; For development only
-touch-reload = /webapp/webapp.py
+; touch-reload = /webapp/webapp.py
 vacuum = true
 die-on-term = true
 uid = uwsgi
