--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,12 @@
 image: tiangolo/docker-with-compose
 
+variables:
+    DOCKER_REGISTRY: registry.gitlab.com
+    DOCKER_WEBAPP_IMAGE: registry.gitlab.com/lucabrena/pss_assignment_1/webapp
+    DOCKER_API_IMAGE: registry.gitlab.com/lucabrena/pss_assignment_1/api
+    DOCKER_NGINX_IMAGE: registry.gitlab.com/lucabrena/pss_assignment_1/nginx
+
+
 services:
     - docker:dind
 
@@ -21,5 +28,13 @@ test:
         - pip install --upgrade pip
         - pip install flask flask_restful redis pytest
         - pytest -p no:cacheprovider tests
+        - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY
+        - docker build -t $DOCKER_WEBAPP_IMAGE ./webapp
+        - docker build -t $DOCKER_API_IMAGE ./api
+        - docker build -t $DOCKER_NGINX_IMAGE ./nginx
+        - docker push $DOCKER_WEBAPP_IMAGE
+        - docker push $DOCKER_API_IMAGE
+        - docker push $DOCKER_NGINX_IMAGE
+
 
   
