--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker:stable
+image: tiangolo/docker-with-compose
 
 variables:
     DOCKER_REGISTRY: registry.gitlab.com
@@ -22,6 +22,7 @@ stages:
 test:
     stage: test
     services: 
+        - docker
         - redis
     script:
         - cd api
