Trying docker:dind as internal services for test stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ stages:
 test:
     stage: test
     services: 
-        - docker
+        - docker:dind
         - redis
     script:
         - cd api
