--- a/nginx/webapp.conf
+++ b/nginx/webapp.conf
@@ -1,4 +1,4 @@
-# wsgi.conf
+# webapp.conf
 server {
     listen 80;
 
@@ -9,7 +9,7 @@ server {
         uwsgi_pass uwsgi://api:6000;
     }  
 
-    location ~ /(greetings|delete|showall) { 
+    location ~ /(greetings|delete|showall|maxcounts) { 
         include uwsgi_params;
         uwsgi_pass uwsgi://flask:5000;
     }
