--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -7,7 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
 spec:
   rules:
-  - http:
+  - host: prosviso.com
+    http:
       paths:
       - path: /*
         backend:
