Trying uing gitlab cache

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,27 +6,24 @@ variables:
     DOCKER_API_IMAGE: registry.gitlab.com/lucabrena/pss_assignment_1/api
     DOCKER_NGINX_IMAGE: registry.gitlab.com/lucabrena/pss_assignment_1/nginx
 
+services:
+    - docker:dind
 
 stages:
     - build
     - test
     - push
 
+cache:
+  paths:
+    - images/
+
 build:
     stage: build
     script:
-        - docker build\
-            --cache-from api:latest\
-            --tag api:$CI_BUILD_REF\
-            --tag api:latest\
-        - docker build\
-            --cache-from flask:latest\
-            --tag flask:$CI_BUILD_REF\
-            --tag flask:latest\
-        - docker build\
-            --cache-from nginx:latest\
-            --tag nginx:$CI_BUILD_REF\
-            --tag nginx:latest\
+        - docker build --cache-from api:latest --tag api:$CI_BUILD_REF --tag api:latest\
+        - docker build --cache-from flask:latest --tag flask:$CI_BUILD_REF --tag flask:latest\
+        - docker build --cache-from nginx:latest --tag nginx:$CI_BUILD_REF --tag nginx:latest\
 
 test:
     stage: test
@@ -40,6 +37,8 @@ test:
 
 push:
     stage: push
+    services: 
+        - docker:dind
     script:
         - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY
         # - docker build -t $DOCKER_FLASK_IMAGE flask/
