--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,9 +26,9 @@ build:
         # - docker build --cache-from $CONTAINER_IMAGE:latest --tag $CONTAINER_IMAGE:$CI_COMMIT_SHA --tag $CONTAINER_IMAGE:latest .
         # - docker push $CONTAINER_IMAGE:$CI_COMMIT_SHA
         # - docker push $CONTAINER_IMAGE:latest
-        - docker build --cache-from $DOCKER_API_IMAGE:latest --tag $DOCKER_API_IMAGE:$CI_BUILD_REF --tag $DOCKER_API_IMAGE:latest api/
-        - docker build --cache-from $DOCKER_FLASK_IMAGE:latest --tag $DOCKER_FLASK_IMAGE:$CI_BUILD_REF --tag $DOCKER_FLASK_IMAGE:latest flask/
-        - docker build --cache-from $DOCKER_NGINX_IMAGE:latest --tag $DOCKER_NGINX_IMAGE:$CI_BUILD_REF --tag $DOCKER_NGINX_IMAGE:latest nginx/
+        - docker build --cache-from $DOCKER_API_IMAGE:latest --tag $DOCKER_API_IMAGE:latest api/
+        - docker build --cache-from $DOCKER_FLASK_IMAGE:latest --tag $DOCKER_FLASK_IMAGE:latest flask/
+        - docker build --cache-from $DOCKER_NGINX_IMAGE:latest --tag $DOCKER_NGINX_IMAGE:latest nginx/
 
 # test:
 #     stage: test
