--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,15 +20,15 @@ stages:
 build:
     stage: build
     script:
-        # - docker pull $DOCKER_FLASK_IMAGE:latest || true
-        # - docker pull $DOCKER_NGINX_IMAGE:latest || true
-        # - docker pull $DOCKER_API_IMAGE:latest || true
+        - docker pull $DOCKER_FLASK_IMAGE:latest || true
+        - docker pull $DOCKER_NGINX_IMAGE:latest || true
+        - docker pull $DOCKER_API_IMAGE:latest || true
         # - docker build --cache-from $CONTAINER_IMAGE:latest --tag $CONTAINER_IMAGE:$CI_COMMIT_SHA --tag $CONTAINER_IMAGE:latest .
         # - docker push $CONTAINER_IMAGE:$CI_COMMIT_SHA
         # - docker push $CONTAINER_IMAGE:latest
-        - docker build --pull --cache-from $DOCKER_API_IMAGE:latest --tag $DOCKER_API_IMAGE:latest api/
-        - docker build --pull --cache-from $DOCKER_FLASK_IMAGE:latest --tag $DOCKER_FLASK_IMAGE:latest flask/
-        - docker build --pull --cache-from $DOCKER_NGINX_IMAGE:latest --tag $DOCKER_NGINX_IMAGE:latest nginx/
+        - docker build --cache-from $DOCKER_API_IMAGE:latest --tag $DOCKER_API_IMAGE:latest api/
+        - docker build --cache-from $DOCKER_FLASK_IMAGE:latest --tag $DOCKER_FLASK_IMAGE:latest flask/
+        - docker build --cache-from $DOCKER_NGINX_IMAGE:latest --tag $DOCKER_NGINX_IMAGE:latest nginx/
         - docker push $DOCKER_API_IMAGE:latest
         - docker push $DOCKER_FLASK_IMAGE:latest
         - docker push $DOCKER_NGINX_IMAGE:latest
