--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,24 +15,21 @@ before_script:
 stages:
     - build
     # - test
-    # - push
+    - push
 
 build:
     stage: build
     script:
         - docker pull $DOCKER_FLASK_IMAGE:latest || true
-        - docker pull $DOCKER_NGINX_IMAGE:latest || true
-        - docker pull $DOCKER_API_IMAGE:latest || true
-        # - docker build --cache-from $CONTAINER_IMAGE:latest --tag $CONTAINER_IMAGE:$CI_COMMIT_SHA --tag $CONTAINER_IMAGE:latest .
-        # - docker push $CONTAINER_IMAGE:$CI_COMMIT_SHA
-        # - docker push $CONTAINER_IMAGE:latest
-        - docker build --cache-from $DOCKER_API_IMAGE:latest --tag $DOCKER_API_IMAGE:latest api/
-        - docker build --cache-from $DOCKER_FLASK_IMAGE:latest --tag $DOCKER_FLASK_IMAGE:latest flask/
-        - docker build --cache-from $DOCKER_NGINX_IMAGE:latest --tag $DOCKER_NGINX_IMAGE:latest nginx/
-        - docker push $DOCKER_API_IMAGE:latest
-        - docker push $DOCKER_FLASK_IMAGE:latest
-        - docker push $DOCKER_NGINX_IMAGE:latest
-
+    #     - docker pull $DOCKER_NGINX_IMAGE:latest || true
+    #     - docker pull $DOCKER_API_IMAGE:latest || true
+    #     - docker build --cache-from $DOCKER_API_IMAGE:latest -t $DOCKER_API_IMAGE:latest api/
+        - docker build --cache-from $DOCKER_FLASK_IMAGE:latest -t $DOCKER_FLASK_IMAGE:prova flask/
+    #     - docker build --cache-from $DOCKER_NGINX_IMAGE:latest -t $DOCKER_NGINX_IMAGE:latest nginx/
+    artifacts:
+        paths:
+        - /var/lib/docker
+    
 # test:
 #     stage: test
 #     services: 
@@ -43,15 +40,18 @@ build:
 #         - pip install flask flask_restful redis pytest
 #         - pytest -p no:cacheprovider tests
 
-# push:
-#     stage: push
-#     services: 
-#         - docker:dind
-#     script:
-#         - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY
-#         - docker push $DOCKER_FLASK_IMAGE:latest
-#         - docker push $DOCKER_API_IMAGE:latest
-#         - docker push $DOCKER_NGINX_IMAGE:latest
+push:
+    stage: push
+    script:
+        # - docker pull $DOCKER_FLASK_IMAGE:latest || true
+        # - docker pull $DOCKER_NGINX_IMAGE:latest || true
+        # - docker pull $DOCKER_API_IMAGE:latest || true
+        # - docker build --cache-from $DOCKER_API_IMAGE:latest -t $DOCKER_API_IMAGE:latest api/
+        # - docker build --cache-from $DOCKER_FLASK_IMAGE:latest -t $DOCKER_FLASK_IMAGE:latest flask/
+        # - docker build --cache-from $DOCKER_NGINX_IMAGE:latest -t $DOCKER_NGINX_IMAGE:latest nginx/
+        # - docker push $DOCKER_API_IMAGE:latest
+        # - docker push $DOCKER_FLASK_IMAGE:latest
+        - docker push $DOCKER_FLASK_IMAGE:prova
 
 
 
