--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,6 @@ variables:
     NGINX_TEST_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH/nginx:$CI_COMMIT_REF_SLUG
     DOCKER_DRIVER: overlay2
 
-services:
-    - docker:dind
-
 before_script:
   - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
 
@@ -22,6 +19,8 @@ stages:
 
 build:
     stage: build
+    services:
+        - docker:dind
     script:
         - docker pull $FLASK_IMAGE || true
         - docker pull $NGINX_IMAGE || true
@@ -35,6 +34,8 @@ build:
 
 test:
     stage: test
+    before_script: 
+        - ''
     services: 
         - redis
     script:
@@ -45,6 +46,8 @@ test:
 
 push:
     stage: push
+    services:
+        - docker:dind
     script:
         - docker pull $FLASK_TEST_IMAGE || true
         - docker pull $NGINX_TEST_IMAGE || true
