Error in gitlab-ci.yaml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,9 @@ variables:
     FLASK_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH/flask:latest
     API_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH/api:latest
     NGINX_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH/nginx:latest
-    FLASK_TEST_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH/flask:$CI_COMMIT_REF_SLUG
-    API_TEST_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH/api:$CI_COMMIT_REF_SLUG
-    NGINX_TEST_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH/nginx:$CI_COMMIT_REF_SLUG
+    FLASK_TEST_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH/flask:$CI_COMMIT_SHA
+    API_TEST_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH/api:$CI_COMMIT_SHA
+    NGINX_TEST_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH/nginx:$CI_COMMIT_SHA
     DOCKER_DRIVER: overlay2
 
 before_script:
@@ -57,7 +57,7 @@ push:
         - docker tag $NGINX_TEST_IMAGE $NGINX_IMAGE
         - docker push $API_IMAGE
         - docker push $FLASK_IMAGE
-        - docker push $$NGINX_IMAGE
+        - docker push $NGINX_IMAGE
 
 
 
