--- a/deployment/nginx-deployment.yaml
+++ b/deployment/nginx-deployment.yaml
@@ -13,8 +13,10 @@ spec:
         # the Deployment label selector to this value
         app: nginx-pod
     spec:
+      imagePullSecrets: # use the secrets created before the deployment for authenticating with gitlab registry
+        - name: registry.gitlab.com
       containers:
         - name: nginx-container
-          image: webapp-nginx:kuber
+          image: registry.gitlab.com/lucabrena/pss_assignment_1/nginx:latest
           ports:
             - containerPort: 80
